website: added sitemap generator
Made sure api framework pages ended with a slash, same for examples.

--- a/packages/website/src/_includes/components/example.njk
+++ b/packages/website/src/_includes/components/example.njk
@@ -1,6 +1,6 @@
 <a 
   class="example-card" 
-  href="/docs/{{example.url}}/examples/{{example.framework | slug}}"
+  href="/docs/{{example.url}}/examples/{{example.framework | slug}}/"
 >
   <div class="flex flex-col h-full">
     <div class="text-normal font-medium mb-4">{{ example.text }}</div>
