--- a/packages/website/src/_includes/layouts/base.njk
+++ b/packages/website/src/_includes/layouts/base.njk
@@ -32,6 +32,18 @@
       </script>
     {% endif %}
 
+    {% if config.environment == 'production' %}
+    <!-- Google tag (gtag.js) -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-5ZG3598Z4M"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-5ZG3598Z4M');
+      </script>
+    {% endif %}
+
     {% if description %}
       <meta name="description" content="{{ description }}">
       <meta name="twitter:description" content="{{ description }}" />
