--- a/packages/website/src/pages/docs/example-pages.njk
+++ b/packages/website/src/pages/docs/example-pages.njk
@@ -1,6 +1,6 @@
 ---
 layout: layouts/base.njk
-permalink: "/docs/{{example.url}}/examples/{{example.framework | slug}}"
+permalink: "/docs/{{example.url}}/examples/{{example.framework | slug}}/"
 stickyNavigation: false
 pagination:
   data: examples
