website: fixed breadcrumb for example detail page

--- a/packages/website/src/pages/docs/example-pages.njk
+++ b/packages/website/src/pages/docs/example-pages.njk
@@ -17,17 +17,17 @@ eleventyComputed:
   <nav aria-label="Breadcrumb" class='breadcrumb'>
     <ol>
       <li>
-        <a href="../../">
+        <a href="../../../">
           Docs
         </a>
       </li>
       <li>
-        <a href="../" class="capitalize">
+        <a href="../../" class="capitalize">
           {{example.component}}
         </a>
       </li>
       <li>
-        <a href="../examples" class="capitalize">
+        <a href="../" class="capitalize">
           examples
         </a>
       </li>
