website: added demo

--- a/packages/website/src/pages/home/home.njk
+++ b/packages/website/src/pages/home/home.njk
@@ -229,7 +229,7 @@ keywords: "uiloos, headless ui, component library, common web behaviors, javascr
           >
             <picture>
               <source type="image/avif" srcset="/images/owls/tawny.avif">
-              <img width="1920" height="1280" src="/images/owls/tawny.jpg" alt="image of a snow owl" />
+              <img width="1920" height="1280" src="/images/owls/tawny.jpg" alt="image of a tawny owl" />
             </picture>
             <article class="p-4">
               <h3 class="font-bold">Tawny owl</h3>
