improvement: typewriterFromSentences autoPlay can now be delayed.
Added property called `autoPlayAfter` which delays the `autoPlay` by
the amount of milliseconds given.

The documentation of Typewriter now consistently mentions that the time
is in milliseconds.

--- a/packages/website/src/pages/releases/alpine/alpine-releases.njk
+++ b/packages/website/src/pages/releases/alpine/alpine-releases.njk
@@ -19,7 +19,7 @@ keywords: "uiloos alpine releases, alpine release hub"
     >
       <path
         d="M.293 5.282L5 .5l1.414 1.436-3 3.048H12v2.032H3.414l3 3.048L5 11.5.293 6.718a1.027 1.027 0 010-1.436z"
-      />
+/>
     </svg>
     Releases
   </a>
@@ -33,6 +33,9 @@ keywords: "uiloos alpine releases, alpine release hub"
   </p>
 
   <ol>
+    <li>
+      <a href="/releases/alpine/1.7.0/" class="font-mono">1.7.0 - 2024-06-07</a>
+    </li>
     <li>
       <a href="/releases/alpine/1.6.0/" class="font-mono">1.6.0 - 2024-02-19</a>
     </li>
