--- a/packages/website/src/pages/releases/svelte/svelte-releases.njk
+++ b/packages/website/src/pages/releases/svelte/svelte-releases.njk
@@ -34,6 +34,9 @@ keywords: "uiloos svelte releases, svelte release hub"
 
   <ol>
     <li>
+      <a href="/releases/svelte/1.7.0/" class="font-mono">1.7.0 - 2024-06-07</a>
+    </li>
+    <li>
       <a href="/releases/svelte/1.6.0/" class="font-mono">1.6.0 - 2024-02-19</a>
     </li>
     <li>
